--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "author": "David Liendo",
   "license": "MIT",
   "dependencies": {
-    "hardhat": "^2.4.3"
+    "hardhat": "^2.4.3",
+    "web3-eth": "^1.5.2",
+    "web3-eth-contract": "^1.5.2"
   },
   "devDependencies": {
     "@maticnetwork/maticjs": "^2.0.44",
@@ -18,6 +20,7 @@
     "chai": "^4.2.0",
     "ethereum-waffle": "^3.0.0",
     "ethers": "^5.0.0",
-    "truffle-plugin-verify": "^0.5.11"
+    "truffle-plugin-verify": "^0.5.11",
+    "web3": "^1.5.2"
   }
 }
