--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@ethereumjs/tx": "^3.3.0",
     "hardhat": "^2.4.3",
     "web3-eth": "^1.5.2",
-    "web3-eth-contract": "^1.5.2"
+    "web3-eth-contract": "^1.5.2",
+    "web3js-quorum": "^21.7.0-rc1"
   },
   "devDependencies": {
     "@maticnetwork/maticjs": "^2.0.44",
